# t-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: clean.rs  cli.rs  collect.rs  config.rs  error.rs  main.rs
src/generate/: init_config.rs  mod.rs  tgen.rs
src/utils/: expr_to_value.rs  is_target_file.rs  mod.rs  resolve.rs
template/: t.config.ts
