[package]
name = "t-cli"
version = "0.3.0"
edition = "2024"
authors = ["Jiaxiang Zhang <nuclefpv@gmail.com>"]
license = "MIT"
description = "Simple t function CLI"
resolver = "3"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures = "0.3"
ignore = "0.4"
indexmap = { version = "2", features = ["serde"] }
path-clean = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
swc_common = "15.0"
swc_ecma_ast = "16.0"
swc_ecma_codegen = "18.0"
swc_ecma_parser = { version = "25.0", features = ["swc_ecma_visit"] }
swc_ecma_visit = "16"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
